# wreq-python

./: Cargo.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/source/getting-started/: quickstart.md
python/wreq/: wreq.py
src/: client.rs  lib.rs
src/client/: req.rs
