[package]
name = "wreq-python"
version = "0.11.3"
description = "An ergonomic Python HTTP Client with TLS fingerprint"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0x676e67/wreq-python"
authors = ["0x676e67 <gngppz@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wreq"
crate-type = ["cdylib"]
doctest = false

[features]
default = ["abi3-py311"]

# Memory allocator options
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]

# we build cp311-abi3 and cp310 wheels now, move this to pyo3 after we drop cp310
abi3-py311 = ["pyo3/abi3-py311"]
abi3-py313 = ["pyo3/abi3-py313"]
abi3-py314 = ["pyo3/abi3-py314"]

[dependencies]
tokio = "1.52.1"
tokio-util = "0.7.18"
pyo3 = { version = "0.28.3", features = [
    "indexmap",
    "multiple-pymethods",
    "extension-module",
    "generate-import-lib",
    "experimental-async",
] }
pyo3-async-runtimes = { version = "0.28.0", features = [
    "tokio-runtime",
    "unstable-streams",
] }
pin-project-lite = "0.2.16"
futures-util = { version = "0.3.32", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
indexmap = { version = "2.13.0", features = ["serde"] }
bytes = "1.11.1"
arc-swap = "1.9.0"
http = "1.4.0"
http-body-util = "0.1.3"
wreq = { version = "6.0.0-rc.28", features = [
    "query",
    "form",
    "json",
    "socks",
    "stream",
    "multipart",
    "cookies",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "ws",
    "parking_lot",
] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation-compression"] }
hickory-resolver = "0.25.2"
cookie = "0.18"
mimalloc = { version = "0.1.43", default-features = false, features = [
    "local_dynamic_tls",
], optional = true }
tikv-jemallocator = { version = "0.6.1", default-features = false, features = [
    "disable_initial_exec_tls",
], optional = true }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[patch.crates-io]
wreq = { git = "https://github.com/0x676e67/wreq" }
wreq-util = { git = "https://github.com/0x676e67/wreq-util" }
