[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "wreq"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
]
description = "An ergonomic Python HTTP Client with TLS fingerprint"
readme = "README.md"
dynamic = ["version"]
license = { text = "Apache-2.0" }
authors = [{ name = "0x676e67", email = "gngppz@gmail.com" }]
keywords = ["http", "client", "websocket", "ja3", "ja4"]

[tool.maturin]
python-source = "python"

[project.urls]
Documentation = "https://python.wreq.org"
Homepage = "https://github.com/0x676e67/wreq-python"
Repository = "https://github.com/0x676e67/wreq-python"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-rerunfailures",
]
docs = [
  "zensical",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=1.0.3",
  "mike>=2.0.0",
]
bench = [
  "pytest",
  "pyperf",
  "starlette",
  "niquests",
  "httpx",
  "requests",
  "wreq",
  "curl_cffi",
  "aiohttp",
  "pycurl",
  "uvicorn",
  "starlette",
  "typing_extensions",
  "uvloop; platform_system != 'Windows'",
  "ry",
]

[tool.ruff]
[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.pyright]
reportArgumentType = false
extraPaths = ["./python"]
